# iCloud-video-archiver-and-compressor

./: .gitignore  README.md  STANDING_OBJECTIVES.md  archive-config.example.toml  pyproject.toml
archive_videos/: __init__.py  cli.py  compress.py  config.py  discover.py  export.py  glacier.py  reimport.py  state.py  utils.py
scripts/: diag_config.py  filter_videos_for_compression.py  validate_duration_source.py
tests/: __init__.py  conftest.py  test_compress.py  test_config.py  test_discover.py  test_export.py  test_glacier.py  test_integration.py  test_reimport.py  test_state.py  test_utils.py
