[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iCloud-video-archiver-and-compressor"
version = "0.1.0"
description = "Automated export, compression, S3 Glacier backup, and reimport of uncompressed videos from macOS Photos.app"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Michael", email = "mrking@example.com" }
]
keywords = ["photos", "icloud", "ffmpeg", "s3", "glacier", "compression"]
dependencies = [
  "osxphotos>=0.68.5",
  "boto3>=1.37.0",
  "pydantic>=2.0.0",
  "toml>=0.10.2",
  "ffmpeg-python>=0.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.11.0",
  "mypy>=1.0.0",
]

[project.scripts]
archive-videos = "archive_videos.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["archive_videos*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
